--- a/lifecycle-data/products/sharepoint-team-services-10.yml
+++ b/lifecycle-data/products/sharepoint-team-services-10.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: SharePoint Team Services 1.0
-  description: SharePoint Team Services 1.0 volgt het beleid voor vaste levenscyclus.
+  description: SharePoint Team Services 1.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c9fe198170cb3b6572c22de85f46c21d81756bf0
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811764"
 name: SharePoint Team Services 1.0
 summary: >+
-  SharePoint Team Services 1.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  SharePoint Team Services 1.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -34,4 +34,4 @@ releases:
 - version: Original Release
   startDate: 05/31/2001
   endDate: 12/31/2002
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Documentatie voor ontwikkelaars voor SharePoint Team Services 1.0](/previous-versions/office/developer/sharepoint-team-services/dd588683(v=office.11))\n* [Productdocumentatie voor SharePoint Team Services 1.0](/previous-versions/tn-archive/cc767972(v=technet.10))"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Documentatie voor ontwikkelaars voor SharePoint Team Services 1.0](/previous-versions/office/developer/sharepoint-team-services/dd588683(v=office.11))\n* [Productdocumentatie voor SharePoint Team Services 1.0](/previous-versions/tn-archive/cc767972(v=technet.10))"
