--- a/lifecycle-data/products/windows-embedded-standard-7.yml
+++ b/lifecycle-data/products/windows-embedded-standard-7.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Embedded Standard 7
-  description: Windows Embedded Standard 7 volgt het beleid voor vaste levenscyclus.
+  description: Windows Embedded Standard 7 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 2e4b6119250a574a9526e74a7ccea090e02ed61d
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812262"
 name: Windows Embedded Standard 7
 summary: >+
-  Windows Embedded Standard 7 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Embedded Standard 7 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 products:
 - windows
@@ -39,4 +39,4 @@ releases:
 - version: Original Release
   startDate: 07/29/2010
   endDate: 04/09/2013
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [* Extended Security Update Program (ESU) - Uitgebreide beveiligingsupdates voor bepaalde embedded producten zijn beschikbaar via OEM's](/lifecycle/faq/extended-security-updates)\n* [Migratiebegeleiding](https://support.microsoft.com/help/4057281)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> '*Extended Security Updates (ESU) zijn beschikbaar voor Windows Embedded Standard 7 voor maximaal drie jaar na het einde van de ondersteuning via OEM's. Neem contact op met uw Microsoft-partner of -account voor meer informatie.\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [* Programma uitgebreide beveiligingsupdates (ESU) - Uitgebreide beveiligingsupdates voor geselecteerde Embedded-producten zijn via OEM's beschikbaar](/lifecycle/faq/extended-security-updates)\n* [Richtlijnen voor migratie](https://support.microsoft.com/help/4057281)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> '*Voor Windows Embedded Standard 7 zijn extra beveiligingsupdates (Extended Security Updates/ESU) beschikbaar voor tot drie aanvullende jaren na beëindiging van de ondersteuning via OEM's. Neem contact op met uw Microsoft-partner of accountteam voor meer informatie.\n\n## <a name=\"editions\"></a>Edities \n* Standard"
