--- a/lifecycle-data/products/dynamics-ax-2009.yml
+++ b/lifecycle-data/products/dynamics-ax-2009.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics AX 2009
-  description: Dynamics AX 2009 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics AX 2009 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 20756fcbadc2386830d4eecb9129443bef1a2bc2
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811838"
 name: Dynamics AX 2009
 summary: >+
-  Dynamics AX 2009 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics AX 2009 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 08/14/2008
   endDate: 01/11/2011
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/dynamics365/fin-ops-core/dev-itpro/migration-upgrade/data-migration-tool)\n* [Dynamics 365 Migratieprogramma](https://dynamics.microsoft.com/migration-program/)\n* [Aanvullende levenscyclusinformatie](/dynamics365/fin-ops-core/fin-ops/get-started/mainstream-support-ax-2009-2012)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De reguliere ondersteuning is uitgebreid zoals getoond."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/dynamics365/fin-ops-core/dev-itpro/migration-upgrade/data-migration-tool)\n* [Dynamics 365 Migratieprogramma](https://dynamics.microsoft.com/migration-program/)\n* [Extra levenscyclusgegevens](/dynamics365/fin-ops-core/fin-ops/get-started/mainstream-support-ax-2009-2012)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De basisondersteuning is verlengd zoals weergegeven."
