--- a/lifecycle-data/products/dynamics-retail-management-system-20.yml
+++ b/lifecycle-data/products/dynamics-retail-management-system-20.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics Retail Management System 2.0
-  description: Dynamics Retail Management System 2.0 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics Retail Management System 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: e587a27011a62b298f9003be9805c2e01b146057
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812083"
 name: Dynamics Retail Management System 2.0
 summary: >+
-  Dynamics Retail Management System 2.0 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics Retail Management System 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Headquarters, Store Operations
+  Dit is van toepassing op de volgende edities: Hoofdkantoor, winkelactiviteiten
 
 products:
 - dynamics
@@ -39,4 +39,4 @@ releases:
 - version: Service Pack 1
   startDate: 07/31/2007
   endDate: 10/14/2008
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Hoofdkantoor\n* Winkelbewerkingen"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Hoofdkantoor\n* Winkelactiviteiten"
