--- a/lifecycle-data/products/fast-search-server-2010-for-sharepoint.yml
+++ b/lifecycle-data/products/fast-search-server-2010-for-sharepoint.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: FAST Search Server 2010 (voor SharePoint, voor SharePoint-internetsites)
-  description: FAST Search Server 2010 (voor SharePoint, voor SharePoint-internetsites) volgt het beleid voor vaste levenscyclus.
+  title: FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites)
+  description: FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites) volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 2a2c66a5a5e5b2ffc3fbbf82d4a96803e06ee2e5
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812509"
-name: FAST Search Server 2010 (voor SharePoint, voor SharePoint-internetsites)
+name: FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites)
 summary: >+
-  FAST Search Server 2010 (voor SharePoint, voor SharePoint-internetsites) volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites) volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: voor SharePoint, voor SharePoint-internetsites
+  Dit geldt voor de volgende edities: voor SharePoint, voor SharePoint internetsites
 
 products:
 - office
@@ -33,4 +33,4 @@ releases:
 - version: Original Release
   startDate: 06/16/2010
   endDate: 07/10/2012
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101711)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Hiermee worden versies die eerder zijn niet ondersteund, uitgesloten. Ondersteuning voor dit product is onderworpen aan de voorwaarden van de overname.\n\n## <a name=\"editions\"></a>Edities \n* voor SharePoint\n* voor SharePoint-internetsites"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101711)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Uitgesloten versies waarvan de ondersteuning eerder werd stopgezet. Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf.\n\n## <a name=\"editions\"></a>Edities \n* voor SharePoint\n* voor SharePoint internetsites"
