--- a/lifecycle-data/products/microsoft-application-virtualization-hosting-46.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-hosting-46.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Application Virtualization Hosting 4.6 voor Windows-desktops
-  description: Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 21ed557cd6333e43a274796a3b25791c0d7f96cd
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812460"
 name: Microsoft Application Virtualization Hosting 4.6 voor Windows-desktops
 summary: >+
-  Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: voor Windows-desktops
+  Dit geldt voor de volgende edities: voor Windows Desktops
 
 products:
 - windows
@@ -36,4 +36,4 @@ releases:
 - version: Original Release
   startDate: 05/27/2010
   endDate: 04/10/2012
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Product- en migratieinformatie](/microsoft-desktop-optimization-pack/appv-v4/overview-of-application-virtualization)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Aangezien App-V 4.6-client gebruik maakt van de App-V 4.5-server, blijft de App-V 4.5-server worden ondersteund op basis van de levenscyclusdata van App-V 4.6 wanneer deze wordt gebruikt met de ondersteunde App-V 4.6-client.\n\n## <a name=\"editions\"></a>Edities \n* voor Windows-bureaubladen"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Product- en migratiegegevens](/microsoft-desktop-optimization-pack/appv-v4/overview-of-application-virtualization)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Aangezien App-V 4.6-client gebruikmaakt van de App-V 4.5-server, wordt de App-V 4.5-server verder ondersteund op basis van de datums van de levenscyclus van App-V 4.6 wanneer deze wordt gebruikt met de ondersteunde App-V 4.6-client.\n\n## <a name=\"editions\"></a>Edities \n* voor Windows Desktops"
