--- a/lifecycle-data/products/microsoft-biztalk-server-2006.yml
+++ b/lifecycle-data/products/microsoft-biztalk-server-2006.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft BizTalk Server 2006
-  description: Microsoft BizTalk Server 2006 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft BizTalk Server 2006 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 7493f28dc07798e3582685027087bcad4d16db2b
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812434"
 name: Microsoft BizTalk Server 2006
 summary: >+
-  Microsoft BizTalk Server 2006 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BizTalk Server 2006 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Branch, Developer, Enterprise, R2, Standard
+  Dit is van toepassing op de volgende edities: Branch, Developer, Enterprise, R2, Standard
 
 products:
 - microsoft-servers
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 06/23/2006
   endDate: 07/12/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Migratiebegeleiding](https://social.technet.microsoft.com/wiki/contents/articles/18709.biztalk-server-product-lifecycle.aspx)\n\n\n## <a name=\"editions\"></a>Edities \n* Branch\n* Ontwikkelaar\n* Enterprise\n* R2\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Richtlijnen voor migratie](https://social.technet.microsoft.com/wiki/contents/articles/18709.biztalk-server-product-lifecycle.aspx)\n\n\n## <a name=\"editions\"></a>Edities \n* Branch\n* Developer\n* Enterprise\n* R2\n* Standard"
