--- a/lifecycle-data/products/microsoft-forefront-unified-access-gateway-2010.yml
+++ b/lifecycle-data/products/microsoft-forefront-unified-access-gateway-2010.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Forefront Unified Access Gateway 2010
-  description: Microsoft Forefront Unified Access Gateway 2010 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Forefront Unified Access Gateway 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 250585910905b7c124d4f2ad3685d04e3bd64a03
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812385"
 name: Microsoft Forefront Unified Access Gateway 2010
 summary: >+
-  Microsoft Forefront Unified Access Gateway 2010 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Forefront Unified Access Gateway 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -37,4 +37,4 @@ releases:
 - version: Original Release
   startDate: 01/26/2010
   endDate: 01/11/2011
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://techcommunity.microsoft.com/t5/azure-active-directory-identity/bg-p/Identity)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/azure-active-directory-identity/bg-p/Identity)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
