--- a/lifecycle-data/products/microsoft-identity-integration-server-2003.yml
+++ b/lifecycle-data/products/microsoft-identity-integration-server-2003.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Identity Integration Server 2003
-  description: Microsoft Identity Integration Server 2003 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Identity Integration Server 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: dbad234b5c3f1f121bc91d27feef671281cfd044
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812065"
 name: Microsoft Identity Integration Server 2003
-summary: "Microsoft Identity Integration Server 2003 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\nDit geldt voor de volgende edities: Enterprise\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+summary: "Microsoft Identity Integration Server 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Enterprise\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - m365
 policyType: fixed
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 09/26/2003
   endDate: 01/10/2006
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Windows Server-gegevens](/windows-server/)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Windows Servergegevens](/windows-server/)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
