--- a/lifecycle-data/products/microsoft-office-2003-proofing-tools.yml
+++ b/lifecycle-data/products/microsoft-office-2003-proofing-tools.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Office 2003-controleprogramma's
-  description: Microsoft Office 2003-controleprogramma's volgen het beleid voor een vaste levenscyclus.
+  title: Microsoft Office 2003 Taalprogramma's
+  description: Microsoft Office 2003 Taalprogramma's volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: f21b3139ecce220ee29ff6979ea99f6169fe0149
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812751"
-name: Microsoft Office 2003-controleprogramma's
+name: Microsoft Office 2003 Taalprogramma's
 summary: >+
-  Microsoft Office 2003-controleprogramma's volgen het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office 2003 Taalprogramma's volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
