--- a/lifecycle-data/products/microsoft-office-2007.yml
+++ b/lifecycle-data/products/microsoft-office-2007.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2007
-  description: Microsoft Office 2007 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 5a73d67d99002146bfa145d66037a0bb9080f684
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812052"
 name: Microsoft Office 2007
 summary: >+
-  Microsoft Office 2007 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Basic, Enterprise, Home and Student, Professional, Professional Plus, Small Business, Standard, Ultimate
+  Dit is van toepassing op de volgende edities: Basic, Enterprise, Thuisgebruik en Studenten, Professional, Professional Plus, Professionals en Kleine Bedrijven, Standaard, Ultimate
 
 products:
 - office
@@ -36,4 +36,4 @@ releases:
 - version: Original Release
   startDate: 01/27/2007
   endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://support.microsoft.com/kb/3198497)\n\n\n## <a name=\"editions\"></a>Edities \n* Basic\n* Enterprise\n* Thuis en student\n* Professionele\n* Professioneel Plus\n* Small Business\n* Standaard\n* Ultimate"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://support.microsoft.com/kb/3198497)\n\n\n## <a name=\"editions\"></a>Edities \n* Basic\n* Enterprise\n* Thuisgebruik en Studenten\n* Professional\n* Professional Plus\n* Professionals en Kleine Bedrijven\n* Standard\n* Ultimate"
