--- a/lifecycle-data/products/microsoft-office-2008-for-mac.yml
+++ b/lifecycle-data/products/microsoft-office-2008-for-mac.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2008 voor Mac
-  description: Microsoft Office 2008 voor Mac volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office 2008 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: abf5213b99b3f5ca6d64daa69ef50c3462fc9d35
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812050"
 name: Microsoft Office 2008 voor Mac
-summary: "Microsoft Office 2008 voor Mac volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\nDit geldt voor de volgende edities: Business, Home en Student, Special Media Editon\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+summary: "Microsoft Office 2008 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Business, Thuisgebruik en Studenten, speciale media-editie\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - office
 policyType: fixed-mainstream-only
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 01/15/2008
   endDate: 10/19/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De begindatum voor de Office 2008 voor Mac Special Media Edition is 12 maart 2008.\n\n## <a name=\"editions\"></a>Edities \n* Bedrijven\n* Thuis en student\n* Speciale media-editon"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De begindatum voor de speciale media-editie van Office 2008 voor Mac is 12 maart 2008.\n\n## <a name=\"editions\"></a>Edities \n* Business\n* Thuisgebruik en Studenten\n* Speciale media-editie"
