--- a/lifecycle-data/products/microsoft-office-2010.yml
+++ b/lifecycle-data/products/microsoft-office-2010.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2010
-  description: Microsoft Office 2010 volgt het beleid voor een vaste levenscyclus.
+  description: Microsoft Office 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 38b07316aaa247313848fcb558d54d4dad2d9c37
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812051"
 name: Microsoft Office 2010
 summary: >+
-  Microsoft Office 2010 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: eAcademy, Home and Business, Home and Student, Personal, Professional, Professional Academic, Professional Plus, Professional Plus Home Use Program, Standard, Starter
+  Dit geldt voor de volgende edities: eAcademy, Thuisgebruik en Zelfstandigen, Thuisgebruik en Studenten, Personal, Professional, Professional Academic, Professional Plus, Professional Plus Home Use Program, Standard, Starter
 
 products:
 - office
@@ -33,4 +33,4 @@ releases:
 - version: Original Release
   startDate: 07/15/2010
   endDate: 07/10/2012
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Office 2010 einde van de ondersteuning roadmap](/DeployOffice/office-2010-end-support-roadmap)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* eAcademy\n* Thuis en zakelijk\n* Thuis en student\n* Persoonlijke\n* Professionele\n* Professionele Academicus\n* Professioneel Plus\n* Professioneel Plus Home Use-programma\n* Standaard\n* Starter"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Einde van de ondersteuningsroadmap voor Office 2010](/DeployOffice/office-2010-end-support-roadmap)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* eAcademy\n* Thuisgebruik en Zelfstandigen\n* Thuisgebruik en Studenten\n* Personal\n* Professional\n* Professional Academic\n* Professional Plus\n* Professional Plus Home Use Program\n* Standard\n* Starter"
