--- a/lifecycle-data/products/microsoft-office-outlook-2007.yml
+++ b/lifecycle-data/products/microsoft-office-outlook-2007.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Outlook 2007
-  description: Microsoft Office Outlook 2007 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office Outlook 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 055e54e56049aef38f71fd906c5af6438674032a
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812721"
 name: Microsoft Office Outlook 2007
 summary: >+
-  Microsoft Office Outlook 2007 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Outlook 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Standard, met Business Contact Manager, met Interconnect
+  Dit is van toepassing op de volgende edities: Standard, met Business Contact Manager, met Interconnect
 
 products:
 - office
@@ -36,4 +36,4 @@ releases:
 - version: Original Release
   startDate: 01/27/2007
   endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/office/troubleshoot/support/office-2007-not-support)\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard\n* met Business Contact Manager\n* met Interconnect"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/office/troubleshoot/support/office-2007-not-support)\n\n\n## <a name=\"editions\"></a>Edities \n* Standard\n* met Business Contact Manager\n* met Interconnect"
