--- a/lifecycle-data/products/microsoft-sharepoint-2010-workspace-designer.yml
+++ b/lifecycle-data/products/microsoft-sharepoint-2010-workspace-designer.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft SharePoint 2010 (werkruimte, ontwerper)
-  description: Microsoft SharePoint 2010 (Workspace, Designer) volgt het beleid voor vaste levenscyclus.
+  title: Microsoft SharePoint 2010 (Workspace, Designer)
+  description: Microsoft SharePoint 2010 (Workspace, Designer) volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 9d766264fa0494c9507c44a8af4743f375e13c53
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811789"
-name: Microsoft SharePoint 2010 (werkruimte, ontwerper)
+name: Microsoft SharePoint 2010 (Workspace, Designer)
 summary: >+
-  Microsoft SharePoint 2010 (Workspace, Designer) volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft SharePoint 2010 (Workspace, Designer) volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Designer, Workspace
+  Dit is van toepassing op de volgende edities: Designer, Workspace
 
 products:
 - office
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 07/15/2010
   endDate: 10/13/2020
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/office365/enterprise/upgrade-from-sharepoint-2010)\n* [Documentatie voor ontwikkelaars](/previous-versions/office/developer/sharepoint-2010/ee557253(v=office.14))\n* [Productdocumentatie](/previous-versions/office/developer/sharepoint-2010/ee557253(v=office.14))\n\n\n## <a name=\"editions\"></a>Edities \n* Designer\n* Werkruimte"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/office365/enterprise/upgrade-from-sharepoint-2010)\n* [Documentatie voor ontwikkelaars](/previous-versions/office/developer/sharepoint-2010/ee557253(v=office.14))\n* [Productdocumentatie](/previous-versions/office/developer/sharepoint-2010/ee557253(v=office.14))\n\n\n## <a name=\"editions\"></a>Edities \n* Designer\n* Workspace"
