--- a/lifecycle-data/products/microsoft-sql-server-2005.yml
+++ b/lifecycle-data/products/microsoft-sql-server-2005.yml
@@ -1,25 +1,25 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft SQL Server 2005
-  description: Microsoft SQL Server 2005 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft SQL Server 2005 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: cbfadc2995b179c7ee286f02fb5e78cc01d7db8f
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811937"
 name: Microsoft SQL Server 2005
 summary: >
-  Microsoft SQL Server 2005 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft SQL Server 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Compact, Developer, Embedded, Enterprise, Enterprise for Itanium-based Systems, Enterprise X64, Express, Express with Advanced Services, Standard, Standard for Itanium-based Systems, Standard X64, Workgroup
+  Dit is van toepassing op de volgende edities: Compact, Developer, Embedded, Enterprise, Enterprise voor Itanium-gebaseerde systemen, Enterprise X64, Express, Express met geavanceerde services, Standard, Standard voor Itanium-gebaseerde systemen, Standard X64, Workgroup
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - sql-server
 policyType: fixed
@@ -43,4 +43,4 @@ releases:
 - version: Original Release
   startDate: 01/14/2006
   endDate: 07/10/2007
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/sql/sql-server/end-of-support/sql-server-end-of-life-overview)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Microsoft SQL Server 2005 Compact Edition uitgebracht op 19 februari 2007.\n\n## <a name=\"editions\"></a>Edities \n* Compact\n* Ontwikkelaar\n* Ingesloten\n* Enterprise\n* Enterprise for Itanium-gebaseerde systemen\n* Onderneming X64\n* Express\n* Express met geavanceerde services\n* Standaard\n* Standaard voor itanium-gebaseerde systemen\n* Standaard X64\n* Werkgroep"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/sql/sql-server/end-of-support/sql-server-end-of-life-overview)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Microsoft SQL Server 2005 Compact Edition uitgebracht op 19 februari 2007.\n\n## <a name=\"editions\"></a>Edities \n* Compact\n* Developer\n* Embedded\n* Enterprise\n* Enterprise voor Itanium-gebaseerde systemen\n* Enterprise X64\n* Express\n* Express met geavanceerde services\n* Standard\n* Standard voor itanium-gebaseerde systemen\n* Standaard X64\n* Workgroup"
