--- a/lifecycle-data/products/microsoft-sql-server-2008-r2.yml
+++ b/lifecycle-data/products/microsoft-sql-server-2008-r2.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft SQL Server 2008 R2
-  description: Microsoft SQL Server 2008 R2 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft SQL Server 2008 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: fab744b0945bef274e20d81e4c86df2c1e7f69d6
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811931"
 name: Microsoft SQL Server 2008 R2
 summary: >+
-  Microsoft SQL Server 2008 R2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft SQL Server 2008 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Datacenter, Developer, Enterprise, Express, Express with Advanced Services, for Embedded Systems, Standard, Standard Edition for Small Business, Web, Workgroup
+  Dit is van toepassing op de volgende edities: Datacenter, Developer, Enterprise, Express, Express met geavanceerde services, voor Embedded Systems, Standard, standaardeditie voor Professionals en Kleine Bedrijven, Web, Workgroup
 
 products:
 - sql-server
@@ -36,4 +36,4 @@ releases:
 - version: Original Release
   startDate: 07/20/2010
   endDate: 07/10/2012
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [SQL Server-ondersteuningsopties voor sql-server](/sql/sql-server/end-of-support/sql-server-end-of-life-overview)\n* [SQL Server 2008 en Windows Server 2008 einde ondersteuningsopties](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Uitgebreid beveiligingsupdateprogramma (ESU)](/lifecycle/faq/extended-security-updates)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Uitgebreide beveiligingsupdates (ESU) zijn beschikbaar voor de datacenter-, standaard-, onderneming- en embedded-edities van dit product, voor maximaal drie jaar na het einde van de ondersteuning.\n> [!NOTE]\n> Alleen voor IA64 wordt SP2 ondersteund tot 7/9/2019. Zie de SQL Release Services blog voor meer informatie.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Ontwikkelaar\n* Enterprise\n* Express\n* Express met geavanceerde services\n* voor embedded systemen\n* Standaard\n* Standard Edition voor kleine bedrijven\n* Web\n* Werkgroep"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Opties voor einde van ondersteuning van SQL Server](/sql/sql-server/end-of-support/sql-server-end-of-life-overview)\n* [Opties voor einde van de ondersteuning voor SQL Server 2008 en Windows Server 2008](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Voor de Datacenter-, Standard-, Enterprise- en Embedded-edities van dit product zijn extra beveiligingsupdates (Extended Security Updates/ESU) beschikbaar voor tot drie aanvullende jaren na beëindiging van de ondersteuning.\n> [!NOTE]\n> Alleen voor IA64 wordt SP2 ondersteund tot 09/07/2019. Raadpleeg de SQL Release Services-blog voor meer informatie.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Developer\n* Enterprise\n* Express\n* Express met geavanceerde services\n* voor Embedded Systems\n* Standard\n* Standaardeditie voor Professionals en Kleine Bedrijven\n* Web\n* Workgroup"
