--- a/lifecycle-data/products/microsoft-sync-framework-10.yml
+++ b/lifecycle-data/products/microsoft-sync-framework-10.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Sync Framework 1.0
-  description: Microsoft Sync Framework 1.0 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Sync Framework 1.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c57a9049aa6c69c1a71aaa99f5a8184b78d1e144
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812350"
 name: Microsoft Sync Framework 1.0
 summary: >
-  Microsoft Sync Framework 1.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Sync Framework 1.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - vs
 policyType: fixed
@@ -32,4 +32,4 @@ releases:
 - version: Original Release
   startDate: 11/04/2008
   endDate: 07/12/2011
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/previous-versions/sql/synchronization/mt490617(v=msdn.10))\n\n> [!NOTE]\n> Ondersteuning voor Sync Framework 1.0 SP1 eindigt op de aangegeven datum, tenzij deze wordt gedistribueerd als onderdeel van SharePoint Server 2010, 2013, 2016 of 2019. Componenten krijgen dezelfde ondersteuning als hun bovenliggende product of platform."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/previous-versions/sql/synchronization/mt490617(v=msdn.10))\n\n> [!NOTE]\n> Ondersteuning voor Sync Framework 1.0 SP1 eindigt op de aangegeven datum, tenzij deze wordt verdeeld als onderdeel van SharePoint Server 2010, 2013, 2016 of 2019. Componenten ontvangen dezelfde ondersteuning als het bovenliggende product of platform."
