--- a/lifecycle-data/products/microsoft-visual-studio-2005.yml
+++ b/lifecycle-data/products/microsoft-visual-studio-2005.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Visual Studio 2005
-  description: Microsoft Visual Studio 2005 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Visual Studio 2005 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 576095a27901552e7a275b0a349ed5e1edee8099
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811777"
 name: Microsoft Visual Studio 2005
 summary: >+
-  Microsoft Visual Studio 2005 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Visual Studio 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Professional, Standard, Standard Edition academische licentie, Team Edition voor Database Professionals, Team Edition for Software Architects, Team Edition for Software Developers, Team Edition for Software Testers, Team Suite, Team Test Load Agent, Tools for the Microsoft Office System, VB Express, Visual C# Express, Visual C++ Express, Visual J# Express, Visual Web Developer Express Express
+  Dit is van toepassing op de volgende edities: Professional, Standaard, Standaardeditie academische licentie, Team Edition voor Database Professionals, Team Edition voor softwarearchitecten, Team Edition voor softwareontwikkelaars, Team Edition voor softwaretesters, Team Suite, Team Test Load Agent, hulpprogramma's voor het Microsoft Office-systeem, VB Express, Visual C# Express, Visual C++ Express, Visual J# Express, Visual Web Developer Express
 
 products:
 - vs
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 01/27/2006
   endDate: 01/08/2008
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Ondersteuningsinformatie voor Visual J#](https://msdn.microsoft.com/vstudio/bb188593)\n* [Migratiebegeleiding](/visualstudio/porting/port-migrate-and-upgrade-visual-studio-projects?view=vs-2019)\n* [Productinformatie van Visual Studio](https://www.VisualStudio.com)\n\n> [!NOTE]\n> Ondersteuning voor dit product is beëindigd. Zie hieronder voor migratiebegeleiding.\n> [!NOTE]\n> Microsoft Visual Studio 2005 Team Edition for Database Professionals uitgebracht op 2 maart 2007.\n\n## <a name=\"editions\"></a>Edities \n* Professionele\n* Standaard\n* Academische licentie voor Standard Edition\n* Team Edition voor databaseprofessionals\n* Team Edition voor softwarearchitecten\n* Team Edition voor softwareontwikkelaars\n* Team Edition voor Software Testers\n* Teamsuite\n* Teamtestbelastingagent\n* Hulpprogramma's voor het Microsoft Office-systeem\n* VB Express\n* Visual C# Express\n* Visual C++ Express\n* Visual J# Express\n* Visual Web Developer Express"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsgegevens voor Visual J#](https://msdn.microsoft.com/vstudio/bb188593)\n* [Richtlijnen voor migratie](/visualstudio/porting/port-migrate-and-upgrade-visual-studio-projects?view=vs-2019)\n* [Productgegevens voor Visual Studio](https://www.VisualStudio.com)\n\n> [!NOTE]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.\n> [!NOTE]\n> Microsoft Visual Studio 2005 Team Edition voor Database Professionals uitgegeven op 2 maart 2007.\n\n## <a name=\"editions\"></a>Edities \n* Professional\n* Standard\n* Academische licentie voor de standaardeditie\n* Team Edition voor Database Professionals\n* Team Edition voor softwarearchitecten\n* Team Edition voor softwareontwikkelaars\n* Team Edition voor softwaretesters\n* Team Suite\n* Team Test Load Agent\n* Hulpprogramma's voor het Microsoft Office-systeem\n* VB Express\n* Visual C# Express\n* Visual C++ Express\n* Visual J# Express\n* Visual Web Developer Express"
