--- a/lifecycle-data/products/microsoft-windows-sharepoint-services-30.yml
+++ b/lifecycle-data/products/microsoft-windows-sharepoint-services-30.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Windows SharePoint Services 3.0
-  description: Microsoft Windows SharePoint Services 3.0 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Windows SharePoint Services 3.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: cdc4d8caef3f00f070c4d3ce32c2eea2f6ecbf24
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811772"
 name: Microsoft Windows SharePoint Services 3.0
-summary: "Microsoft Windows SharePoint Services 3.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> De ondersteuning is beëindigd. \n"
+summary: "Microsoft Windows SharePoint Services 3.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning is beëindigd. \n"
 products:
 - office
 policyType: fixed
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 11/13/2006
   endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Migratiebegeleiding](/office365/enterprise/sharepoint-2007-end-of-support)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Richtlijnen voor migratie](/office365/enterprise/sharepoint-2007-end-of-support)"
