--- a/lifecycle-data/products/microsoft-windows-small-business-server-2003.yml
+++ b/lifecycle-data/products/microsoft-windows-small-business-server-2003.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Windows Small Business Server 2003
-  description: Microsoft Windows Small Business Server 2003 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Windows Small Business Server 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 8ac087fd1710a2deb48d9507f342d447d9c96b2c
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812313"
 name: Microsoft Windows Small Business Server 2003
 summary: >+
-  Microsoft Windows Small Business Server 2003 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Windows Small Business Server 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Premium, Standard
+  Dit is van toepassing op de volgende edities: Premium, Standard
 
 products:
 - windows
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 12/16/2003
   endDate: 07/10/2007
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Migratiebegeleiding](https://aka.ms/AA1ovn4)\n\n> [!NOTE]\n> De ondersteuningsdatum voor dit productpakket wordt bepaald door de respectievelijke levenscyclus van het afzonderlijke componentproduct. Bekijk de levenscyclus van het afzonderlijke onderdeelproduct om de duur van de ondersteuning te bepalen.\n> [!NOTE]\n> De startdatum voor Windows Small Business Server 2003 Standard Edition is 16 december 2003. \n\n## <a name=\"editions\"></a>Edities \n* Premium\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)\n\n> [!NOTE]\n> De ondersteuningsdatum voor dit productpakket wordt bepaald door de respectievelijke levenscyclus van het afzonderlijke onderdeelproduct. Bekijk de levenscyclus van het afzonderlijke onderdeelproduct om de duur van de ondersteuning te bepalen.\n> [!NOTE]\n> De startdatum voor Windows Small Business Server 2003 Standard Edition is 16 december 2003. \n\n## <a name=\"editions\"></a>Edities \n* Premium\n* Standard"
