--- a/lifecycle-data/products/plus-for-windows-xp.yml
+++ b/lifecycle-data/products/plus-for-windows-xp.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Plus! voor Windows XP
-  description: Microsoft Plus! voor Windows XP het beleid voor vaste levenscyclus.
+  description: Microsoft Plus! voor Windows XP volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: e9969a2f2dff3c92df44160d15a0e6934e5625a7
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812294"
 name: Microsoft Plus! voor Windows XP
 summary: >+
-  Microsoft Plus! voor Windows XP het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Plus! voor Windows XP volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
