--- a/lifecycle-data/products/visual-studio-2010.yml
+++ b/lifecycle-data/products/visual-studio-2010.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio 2010
-  description: Visual Studio 2010 volgt het beleid voor vaste levenscyclus.
+  description: Visual Studio 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 30c112ab23bba45aaec60660ab85c362bcebf030
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811910"
 name: Visual Studio 2010
 summary: >+
-  Visual Studio 2010 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visual Studio 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Agenten, All, ASP .NET MVC 4, Express, F# 2.0 Runtime, Lab Management, Performance Tools, Premium, Professional, Remote Debugger, SDK, Shell (Integrated), Shell (Isolated), Team Agents, Team Explorer, Test Professional, Tools for Office System 4.0 Runtime, Ultimate, VB Express, Visual C# Express, Visual C++ Express, Visual Web Developer Express, Visualization & Modeling SDK
+  Dit is van toepassing op de volgende edities: Agents, All, ASP .NET MVC 4, Express, F# 2.0 Runtime, Lab Management, prestatiehulpprogramma's, Premium, Professional, externe foutopsporing, SDK, Shell (geïntegreerde modus), Shell (geïsoleerde modus), Team Agents, Team Explorer, Test Professional, hulpprogramma's voor Office System 4.0 Runtime, Ultimate, VB Express, Visual C# Express, Visual C++ Express, Visual Web Developer Express, Visualization & Modeling SDK
 
 products:
 - vs
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 06/29/2010
   endDate: 04/10/2012
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Agenten\n* Alle\n* ASP .NET MVC 4\n* Express\n* F# 2.0 Runtime\n* Lab Management\n* Prestatiehulpprogramma's\n* Premium\n* Professionele\n* Foutopsporing op afstand\n* Sdk\n* Shell (geïntegreerd)\n* Shell (geïsoleerd)\n* Teamagenten\n* Teamverkenner\n* Test Professional\n* Hulpprogramma's voor Runtime van Office System 4.0\n* Ultimate\n* VB Express\n* Visual C# Express\n* Visual C++ Express\n* Visual Web Developer Express\n* Visualisatie & Modeling SDK"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Alles\n* ASP .NET MVC 4\n* Express\n* F# 2.0 Runtime\n* Lab Management\n* Prestatiehulpprogramma's\n* Premium\n* Professional\n* Externe foutopsporing\n* SDK\n* Shell (geïntegreerde modus)\n* Shell (geïsoleerde modus)\n* Team Agents\n* Team Explorer\n* Test Professional\n* Hulpprogramma's voor Office System 4.0 Runtime\n* Ultimate\n* VB Express\n* Visual C# Express\n* Visual C++ Express\n* Visual Web Developer Express\n* Visualization & Modeling SDK"
