--- a/lifecycle-data/products/windows-automated-installation-kit-for-windows-7.yml
+++ b/lifecycle-data/products/windows-automated-installation-kit-for-windows-7.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Automated Installation Kit voor Windows 7
-  description: Windows Automated Installation Kit voor Windows 7 volgt het beleid voor vaste levenscyclus.
+  description: Windows Automated Installation Kit voor Windows 7 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: aef3eea94538c8956abb01f8b3e681e9932d18a5
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811748"
 name: Windows Automated Installation Kit voor Windows 7
 summary: >
-  Windows Automated Installation Kit voor Windows 7 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Automated Installation Kit voor Windows 7 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - windows
 policyType: fixed-mainstream-only
