--- a/lifecycle-data/products/windows-server-update-services-30.yml
+++ b/lifecycle-data/products/windows-server-update-services-30.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Server Update Services 3.0
-  description: Windows Server Update Services 3.0 volgt het beleid voor vaste levenscyclus.
+  description: Windows Server Update Services 3.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: b5e6ed046b5497010706f64c93962f1c4af0e2a0
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812615"
 name: Windows Server Update Services 3.0
 summary: >
-  Windows Server Update Services 3.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Server Update Services 3.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > De ondersteuning is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - windows
 policyType: fixed
@@ -35,4 +35,4 @@ releases:
 - version: Original Release
   startDate: 07/10/2007
   endDate: 07/14/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://technet.microsoft.com/library/mt772341%28WS.11%29.aspx)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De steun is verlengd van 7/11/2017 tot 1/14/2020."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://technet.microsoft.com/library/mt772341%28WS.11%29.aspx)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De ondersteuning is verlengd van 11/07/2017 tot 14/01/2020."
