--- a/lifecycle-data/products/windows-server-update-services-for-windows-server-2016.yml
+++ b/lifecycle-data/products/windows-server-update-services-for-windows-server-2016.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Server Update Services voor Windows Server 2016
-  description: Windows Server Update Services voor Windows Server 2016 volgt het beleid voor levenscyclus van componenten.
+  description: Windows Server Update Services voor Windows Server 2016 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 939c37245a4ed7263f746a3baac45b3105d89eda
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811897"
 name: Windows Server Update Services voor Windows Server 2016
 summary: >+
-  Windows Server Update Services voor Windows Server 2016 volgt het beleid voor levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Windows Server Update Services voor Windows Server 2016 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -23,4 +23,4 @@ releases:
 - version: Original Release
   startDate: 10/15/2016
   endDate: 01/12/2027
-content: "> [!TIP]\n> Deze component volgt de levenscyclus van het bovenliggende product, Windows Server 2016.\n\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows Server 2016](/lifecycle/products/windows-server-2016?branch=live)"
+content: "> [!TIP]\n> Dit onderdeel volgt de levenscyclus van het moederproduct, Windows Server 2016.\n\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server 2016](/lifecycle/products/windows-server-2016?branch=live)"
