--- a/lifecycle-data/products/windows-server-update-services-for-windows-server-2019.yml
+++ b/lifecycle-data/products/windows-server-update-services-for-windows-server-2019.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Server Update Services voor Windows Server 2019
-  description: Windows Server Update Services voor Windows Server 2019 volgt het beleid voor levenscyclus van componenten.
+  description: Windows Server Update Services voor Windows Server 2019 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 9ef2f54a3fe3a1de1d28984b691c0b1ed189d9db
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811742"
 name: Windows Server Update Services voor Windows Server 2019
 summary: >+
-  Windows Server Update Services voor Windows Server 2019 volgt het beleid voor levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Windows Server Update Services voor Windows Server 2019 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -23,4 +23,4 @@ releases:
 - version: Original Release
   startDate: 03/04/2019
   endDate: 01/09/2029
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows Server 2019](/lifecycle/products/windows-server-2019)\n\n> [!NOTE]\n> Deze component volgt de levenscyclus van het bovenliggende product, Windows Server 2019."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server 2019](/lifecycle/products/windows-server-2019)\n\n> [!NOTE]\n> Deze component volgt de levenscyclus van het moederproduct, Windows Server 2019."
