--- a/lifecycle-data/products/windows-small-business-server-2008.yml
+++ b/lifecycle-data/products/windows-small-business-server-2008.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Small Business Server 2008
-  description: Windows Small Business Server 2008 volgt het beleid voor vaste levenscyclus.
+  description: Windows Small Business Server 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: ca524a5b2238d362198454212c1b53d9946cdb05
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811898"
 name: Windows Small Business Server 2008
-summary: "Windows Small Business Server 2008 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\nDit geldt voor de volgende edities: Premium, Standard\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n\nDe ondersteuningsdatum voor dit productpakket wordt bepaald door de respectievelijke levenscyclus van het afzonderlijke componentproduct. Bekijk de levenscyclus van het afzonderlijke onderdeelproduct om de duur van de ondersteuning te bepalen.\n"
+summary: "Windows Small Business Server 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Premium, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n\nDe ondersteuningsdatum voor dit productpakket wordt bepaald door de respectievelijke levenscyclus van het afzonderlijke onderdeelproduct. Bekijk de levenscyclus van het afzonderlijke onderdeelproduct om de duur van de ondersteuning te bepalen.\n"
 products:
 - windows
 policyType: fixed
@@ -21,4 +21,4 @@ releases:
 - version: Original Release
   startDate: 11/21/2008
   endDate: 01/14/2020
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://aka.ms/AA1ovn4)\n* [Windows Server 2008](/lifecycle/browse/listings/windows-server-2008)\n* [Exchange Server 2007](/lifecycle/browse/listings/exchange-server-2007)\n* [Microsoft Windows SharePoint Services 3.0](/lifecycle/browse/listings/microsoft-windows-sharepoint-services-30)\n\n\n## <a name=\"editions\"></a>Edities \n* Premium\n* Standaard\n\n"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)\n* [Windows Server 2008](/lifecycle/browse/listings/windows-server-2008)\n* [Exchange Server 2007](/lifecycle/browse/listings/exchange-server-2007)\n* [Microsoft Windows SharePoint Services 3.0](/lifecycle/browse/listings/microsoft-windows-sharepoint-services-30)\n\n\n## <a name=\"editions\"></a>Edities \n* Premium\n* Standard"
