--- a/lifecycle-data/products/windows-storage-server-2008-embedded.yml
+++ b/lifecycle-data/products/windows-storage-server-2008-embedded.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Ingesloten van Windows Storage Server 2008
-  description: Windows Storage Server 2008 Embedded volgt het beleid voor vaste levenscyclus.
+  title: Windows Storage Server 2008 Embedded
+  description: Windows Storage Server 2008 Embedded volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 12346be664c5039b392d1bcbc51143f8c5088758
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811895"
-name: Ingesloten van Windows Storage Server 2008
+name: Windows Storage Server 2008 Embedded
 summary: >+
-  Windows Storage Server 2008 Embedded volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Storage Server 2008 Embedded volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: 32 Bit, 64 Bit, Basic, Basic 32-Bit, Enterprise, Standard, Workgroup
+  Dit is van toepassing op de volgende edities: 32-bits, 64-bits, Basic, Basic 32-bits, Enterprise, Standard, Workgroup
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 07/19/2009
   endDate: 07/12/2011
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/archive/blogs/storageserver/announcing-windows-storage-server-2016)\n\n> [!NOTE]\n> Dit product heeft het einde van de ondersteuning bereikt. Zie hieronder voor migratiebegeleiding.\n\n## <a name=\"editions\"></a>Edities \n* 32-bits\n* 64-bits\n* Basic\n* Basis 32-bits\n* Enterprise\n* Standaard\n* Werkgroep"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/archive/blogs/storageserver/announcing-windows-storage-server-2016)\n\n> [!NOTE]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.\n\n## <a name=\"editions\"></a>Edities \n* 32-bits\n* 64-bits\n* Basic\n* Basic 32-bits\n* Enterprise\n* Standard\n* Workgroup"
