--- a/lifecycle-data/products/windows-xp.yml
+++ b/lifecycle-data/products/windows-xp.yml
@@ -1,25 +1,25 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows XP
-  description: Windows XP volgt het beleid voor vaste levenscyclus.
+  description: Windows XP volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d4fd2bce3e032cdc468570a458c8f10c60ff9170
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811892"
 name: Windows XP
 summary: >
-  Windows XP volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows XP volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Home, Professional, Professional for Embedded Systems, Starter
+  Dit is van toepassing op de volgende edities: Home, Professional, Professional voor Embedded Systems, Starter
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - windows
 policyType: fixed
@@ -43,4 +43,4 @@ releases:
 - version: Original Release
   startDate: 12/31/2001
   endDate: 08/30/2005
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/windows/deployment/upgrade/windows-upgrade-and-migration-considerations)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Start\n* Professionele\n* Professional voor embedded systemen\n* Starter"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/windows/deployment/upgrade/windows-upgrade-and-migration-considerations)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Home\n* Professional\n* Professional for Embedded Systems\n* Starter"
