--- a/lifecycle-data/products/winternals.yml
+++ b/lifecycle-data/products/winternals.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Winternals
-  description: Winternals volgt het beleid voor vaste levenscyclus.
+  description: Winternals volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c53494de8a74f1c533ad0de10eff126605f0d85a
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811891"
 name: Winternals
 summary: >+
-  Winternals volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Winternals volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Administrator's Pak 5.0, Defrag Manager 3.0, Protection Manager 2.0, Recovery Manager 3.0
+  Dit is van toepassing op de volgende edities: Administrator's Pak 5.0, Defrag Manager 3.0, Protection Manager 2.0, Recovery Manager 3.0
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 01/01/2007
   endDate: 01/12/2010
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Levenscyclusbeleid voor Microsoft-acquisities](/lifecycle/faq/general-lifecycle#what-is-the-lifecycle-policy-for-products-or-companies-that-microsoft-acquires)\n\n> [!NOTE]\n> Hiermee worden versies die eerder zijn niet ondersteund, uitgesloten. Ondersteuning voor dit product is onderworpen aan de voorwaarden van de overname.\n\n## <a name=\"editions\"></a>Edities \n* Administrator's Pak 5.0\n* Defrag Manager 3.0\n* Protection Manager 2.0\n* Herstelmanager 3.0"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Levenscyclusbeleid voor Microsoft-verwervingen](/lifecycle/faq/general-lifecycle#what-is-the-lifecycle-policy-for-products-or-companies-that-microsoft-acquires)\n\n> [!NOTE]\n> Uitgesloten versies waarvan de ondersteuning eerder werd stopgezet. Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf.\n\n## <a name=\"editions\"></a>Edities \n* Administrator's Pak 5.0\n* Defrag Manager 3.0\n* Protection Manager 2.0\n* Recovery Manager 3.0"
